--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
   },
   "dependencies": {
     "babel-preset-env": "^1.7.0",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0"
   }
 }
